# rasty-stack-example

./: LICENSE  README.md
actix-surrealdb-api/: .gitignore  Cargo.toml  docker-compose.yml
actix-surrealdb-api/src/: api.rs  db.rs  error.rs  main.rs  model.rs  prelude.rs
todo-solidjs-web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
todo-solidjs-web/src/: App.tsx  index.css  index.tsx
todo-solidjs-web/src/api/: index.ts
todo-solidjs-web/src/components/: taskList.tsx
todo-tauri-desktop/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  tailwind.config.js
todo-tauri-desktop/public/: tailwind_input.css
todo-tauri-desktop/src/: app.rs  controllers.rs  helpers.rs  main.rs  model.rs  todo_api.rs
todo-tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
todo-tauri-desktop/src-tauri/icons/: icon.icns
todo-tauri-desktop/src/components/: task_form.rs  task_item.rs
todo-tauri-solid-desktop/: .gitignore  package.json  pnpm-lock.yaml
todo-tauri-solid-desktop/src/: App.tsx  index.tsx  styles.css
todo-tauri-solid-desktop/src-tauri/: Cargo.toml  tauri.conf.json
todo-tauri-solid-desktop/src-tauri/icons/: icon.icns
todo-tauri-solid-desktop/src/api/: index.ts
todo-tauri-solid-desktop/src/components/: index.ts  taskForm.tsx  taskList.tsx
todo-tauri-solid-desktop/src/helpers/: index.ts
todo-yew-web/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json
todo-yew-web/src/: app.rs  controllers.rs  main.rs  model.rs  state.rs  todo_api.rs
todo-yew-web/src/components/: mod.rs  task_form.rs  task_item.rs  task_list.rs
(+1 files in other folders)
