[package]
name = "todo_yew_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
gloo-dialogs = "0.1.1"
reqwasm = "0.5.0"
serde = { version = "1.0.159", features = ["derive"] }
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
